versioned_docs/version-7.1/server/configuration/monitoring-configuration.mdx
---
title: "Configuration: Monitoring Options"
sidebar_label: "Monitoring Configuration"
sidebar_position: 14
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

<Admonition type="note" title="">

* In this article:
    * OpenTelemetry monitoring:  
      [Monitoring.OpenTelemetry.ConsoleExporter](../../server/configuration/monitoring-configuration.mdx#monitoringopentelemetryconsoleexporter)  
      [Monitoring.OpenTelemetry.Enabled](../../server/configuration/monitoring-configuration.mdx#monitoringopentelemetryenabled)  
      [Monitoring.OpenTelemetry.Meters.AspNetCore.Enabled](../../server/configuration/monitoring-configuration.mdx#monitoringopentelemetrymetersaspnetcoreenabled)  
      [Monitoring.OpenTelemetry.Meters.Runtime.Enabled](../../server/configuration/monitoring-configuration.mdx#monitoringopentelemetrymetersruntimeenabled)  
      [Monitoring.OpenTelemetry.Meters.Server.CPUCredits.Enabled](../../server/configuration/monitoring-configuration.mdx#monitoringopentelemetrymetersservercpucreditsenabled)  
      [Monitoring.OpenTelemetry.Meters.Server.Enabled](../../server/configuration/monitoring-configuration.mdx#monitoringopentelemetrymetersserverenabled)  
      [Monitoring.OpenTelemetry.Meters.Server.GC.Enabled](../../server/configuration/monitoring-configuration.mdx#monitoringopentelemetrymetersservergcenabled)  
      [Monitoring.OpenTelemetry.Meters.Server.General.Enabled](../../server/configuration/monitoring-configuration.mdx#monitoringopentelemetrymetersservergeneralenabled)  
      [Monitoring.OpenTelemetry.Meters.Server.Requests.Enabled](../../server/configuration/monitoring-configuration.mdx#monitoringopentelemetrymetersserverrequestsenabled)  
      [Monitoring.OpenTelemetry.Meters.Server.Resources.Enabled](../../server/configuration/monitoring-configuration.mdx#monitoringopentelemetrymetersserverresourcesenabled)  
      [Monitoring.OpenTelemetry.Meters.Server.Storage.Enabled](../../server/configuration/monitoring-configuration.mdx#monitoringopentelemetrymetersserverstorageenabled)  
      [Monitoring.OpenTelemetry.Meters.Server.TotalDatabases.Enabled](../../server/configuration/monitoring-configuration.mdx#monitoringopentelemetrymetersservertotaldatabasesenabled)  
      [Monitoring.OpenTelemetry.OpenTelemetryProtocol.Enabled](../../server/configuration/monitoring-configuration.mdx#monitoringopentelemetryopentelemetryprotocolenabled)  
      [Monitoring.OpenTelemetry.OpenTelemetryProtocol.Endpoint](../../server/configuration/monitoring-configuration.mdx#monitoringopentelemetryopentelemetryprotocolendpoint)  
      [Monitoring.OpenTelemetry.OpenTelemetryProtocol.ExportProcessorType](../../server/configuration/monitoring-configuration.mdx#monitoringopentelemetryopentelemetryprotocolexportprocessortype)  
      [Monitoring.OpenTelemetry.OpenTelemetryProtocol.Headers](../../server/configuration/monitoring-configuration.mdx#monitoringopentelemetryopentelemetryprotocolheaders)  
      [Monitoring.OpenTelemetry.OpenTelemetryProtocol.Protocol](../../server/configuration/monitoring-configuration.mdx#monitoringopentelemetryopentelemetryprotocolprotocol)  
      [Monitoring.OpenTelemetry.OpenTelemetryProtocol.Timeout](../../server/configuration/monitoring-configuration.mdx#monitoringopentelemetryopentelemetryprotocoltimeout)    
      [Monitoring.OpenTelemetry.ServiceInstanceId](../../server/configuration/monitoring-configuration.mdx#monitoringopentelemetryserviceinstanceid)    
      [Monitoring.OpenTelemetry.ServiceName](../../server/configuration/monitoring-configuration.mdx#monitoringopentelemetryservicename)    
      [Monitoring.OpenTelemetry.ServiceNamespace](../../server/configuration/monitoring-configuration.mdx#monitoringopentelemetryservicenamespace)   
    * SNMP monitoring  
      [Monitoring.Snmp.AuthenticationPassword](../../server/configuration/monitoring-configuration.mdx#monitoringsnmpauthenticationpassword)  
      [Monitoring.Snmp.AuthenticationPassword.Secondary](../../server/configuration/monitoring-configuration.mdx#monitoringsnmpauthenticationpasswordsecondary)  
      [Monitoring.Snmp.AuthenticationProtocol](../../server/configuration/monitoring-configuration.mdx#monitoringsnmpauthenticationprotocol)  
      [Monitoring.Snmp.AuthenticationProtocol.Secondary](../../server/configuration/monitoring-configuration.mdx#monitoringsnmpauthenticationprotocolsecondary)  
      [Monitoring.Snmp.AuthenticationUser](../../server/configuration/monitoring-configuration.mdx#monitoringsnmpauthenticationuser)  
      [Monitoring.Snmp.AuthenticationUser.Secondary](../../server/configuration/monitoring-configuration.mdx#monitoringsnmpauthenticationusersecondary)  
      [Monitoring.Snmp.Community](../../server/configuration/monitoring-configuration.mdx#monitoringsnmpcommunity)  
      [Monitoring.Snmp.DisableTimeWindowChecks](../../server/configuration/monitoring-configuration.mdx#monitoringsnmpdisabletimewindowchecks)  
      [Monitoring.Snmp.Enabled](../../server/configuration/monitoring-configuration.mdx#monitoringsnmpenabled)  
      [Monitoring.Snmp.Port](../../server/configuration/monitoring-configuration.mdx#monitoringsnmpport)  
      [Monitoring.Snmp.PrivacyPassword](../../server/configuration/monitoring-configuration.mdx#monitoringsnmpprivacypassword)  
      [Monitoring.Snmp.PrivacyPassword.Secondary](../../server/configuration/monitoring-configuration.mdx#monitoringsnmpprivacypasswordsecondary)   
      [Monitoring.Snmp.PrivacyProtocol](../../server/configuration/monitoring-configuration.mdx#monitoringsnmpprivacyprotocol)  
      [Monitoring.Snmp.PrivacyProtocol.Secondary](../../server/configuration/monitoring-configuration.mdx#monitoringsnmpprivacyprotocolsecondary)  
      [Monitoring.Snmp.SupportedVersions](../../server/configuration/monitoring-configuration.mdx#monitoringsnmpsupportedversions)  
    * Other monitoring:  
      [Monitoring.Cpu.Exec](../../server/configuration/monitoring-configuration.mdx#monitoringcpuexec)  
      [Monitoring.Cpu.Exec.Arguments](../../server/configuration/monitoring-configuration.mdx#monitoringcpuexecarguments)  
      [Monitoring.Disk.ReadStatsDebounceTimeInMs](../../server/configuration/monitoring-configuration.mdx#monitoringdiskreadstatsdebouncetimeinms)  

</Admonition>

## Monitoring.OpenTelemetry.ConsoleExporter

Indicates if metrics should be exported to the console output.

- **Type**: `bool`
- **Default**: `false`
- **Scope**: Server-wide only



## Monitoring.OpenTelemetry.Enabled

Indicates if OpenTelemetry is enabled or not.

- **Type**: `bool`
- **Default**: `false`
- **Scope**: Server-wide only



## Monitoring.OpenTelemetry.Meters.AspNetCore.Enabled

Indicates if AspNetCore metric is enabled or not.

- **Type**: `bool`
- **Default**: `false`
- **Scope**: Server-wide only



## Monitoring.OpenTelemetry.Meters.Runtime.Enabled

Indicates if Runtime metric is enabled or not.

- **Type**: `bool`
- **Default**: `false`
- **Scope**: Server-wide only



## Monitoring.OpenTelemetry.Meters.Server.CPUCredits.Enabled

Expose metrics related to CPU credits.

- **Type**: `bool`
- **Default**: `false`
- **Scope**: Server-wide only



## Monitoring.OpenTelemetry.Meters.Server.Enabled

Indicates if RavenDB's OpenTelemetry metrics are enabled or not.

- **Type**: `bool`
- **Default**: `true`
- **Scope**: Server-wide only



## Monitoring.OpenTelemetry.Meters.Server.GC.Enabled

Expose metrics related to GC.

- **Type**: `bool`
- **Default**: `false`
- **Scope**: Server-wide only



## Monitoring.OpenTelemetry.Meters.Server.General.Enabled

Expose metrics related to general information about the cluster and its licensing.

- **Type**: `bool`
- **Default**: `true`
- **Scope**: Server-wide only



## Monitoring.OpenTelemetry.Meters.Server.Requests.Enabled

Expose metrics related to requests.

- **Type**: `bool`
- **Default**: `true`
- **Scope**: Server-wide only



## Monitoring.OpenTelemetry.Meters.Server.Resources.Enabled

Expose metrics related to resources usage.

- **Type**: `bool`
- **Default**: `true`
- **Scope**: Server-wide only



## Monitoring.OpenTelemetry.Meters.Server.Storage.Enabled

Expose metrics related to server storage.

- **Type**: `bool`
- **Default**: `true`
- **Scope**: Server-wide only



## Monitoring.OpenTelemetry.Meters.Server.TotalDatabases.Enabled

Expose metrics related to aggregated database statistics.

- **Type**: `bool`
- **Default**: `true`
- **Scope**: Server-wide only



## Monitoring.OpenTelemetry.OpenTelemetryProtocol.Enabled

Indicates if metrics should be exported via the OpenTelemetry protocol.

- **Type**: `bool`
- **Default**: `true`
- **Scope**: Server-wide only



## Monitoring.OpenTelemetry.OpenTelemetryProtocol.Endpoint

Endpoint where OpenTelemetryProtocol should sends data.  

- **Type**: `string`
- **Default**: `null` (internal OTLP default settings)
- **Scope**: Server-wide only



## Monitoring.OpenTelemetry.OpenTelemetryProtocol.ExportProcessorType

OpenTelemetryProtocol export processor type.

- **Type**: `enum ExportProcessorType` (Simple | Batch)
- **Default**: `null`
- **Scope**: Server-wide only



## Monitoring.OpenTelemetry.OpenTelemetryProtocol.Headers

OpenTelemetryProtocol custom headers.

- **Type**: `string`
- **Default**: `null`
- **Scope**: Server-wide only



## Monitoring.OpenTelemetry.OpenTelemetryProtocol.Protocol

Defines the protocol that OpenTelemetryProtocol should use to send data.

- **Type**: `enum OtlpExportProtocol` (Grpc | HttpProtobuf)
- **Default**: `null` (internal OTLP default settings)
- **Scope**: Server-wide only



## Monitoring.OpenTelemetry.OpenTelemetryProtocol.Timeout

OpenTelemetryProtocol timeout value.

- **Type**: `int?`
- **Default**: `null`
- **Scope**: Server-wide only



## Monitoring.OpenTelemetry.ServiceInstanceId

* OpenTelemetry monitoring requires a service instance ID for initialization.  
  You can set the OpenTelemetry service instance ID using this configuration option.  

* If this configuration key is not set, RavenDB will default to using the server's public URL hostname.  
  If the public hostname is unavailable, RavenDB will use the node tag as the identifier.
- **Type**: `string`
- **Default**: `null`
- **Scope**: Server-wide only



## Monitoring.OpenTelemetry.ServiceName

* Sets the OpenTelemetry **service name**.
  This value is reported as the `service.name` resource attribute and is used to identify the RavenDB service in observability tools, such as the .NET Aspire dashboard.

* If [Monitoring.OpenTelemetry.Enabled](../../server/configuration/monitoring-configuration.mdx#monitoringopentelemetryenabled) is set to `true`,
  the effective value must not be `null`, empty, or whitespace.  
  Otherwise, the server will fail to start.

---

- **Type**: `string`
- **Default**: `server`
- **Scope**: Server-wide only



## Monitoring.OpenTelemetry.ServiceNamespace

* Sets the OpenTelemetry **service namespace**.
  This value is reported as the `service.namespace` resource attribute and is used to group related services together in observability tools.  

* If [Monitoring.OpenTelemetry.Enabled](../../server/configuration/monitoring-configuration.mdx#monitoringopentelemetryenabled) is set to `true`,
  the effective value must not be `null`, empty, or whitespace.  
  Otherwise, the server will fail to start.

---

- **Type**: `string`
- **Default**: `ravendb`
- **Scope**: Server-wide only



## Monitoring.Snmp.AuthenticationPassword

Authentication password used for SNMP v3 authentication.  
When set to `null` then the value from 'Monitoring.Snmp.Community' is used.

- **Type**: `string`
- **Default**: `null`
- **Scope**: Server-wide only



## Monitoring.Snmp.AuthenticationPassword.Secondary

Authentication password used by secondary user for SNMP v3 authentication.

- **Type**: `string`
- **Default**: `null`
- **Scope**: Server-wide only



## Monitoring.Snmp.AuthenticationProtocol

Authentication protocol used for SNMP v3 authentication.

- **Type**: `SnmpAuthenticationProtocol`
- **Default**: `SHA1`
- **Scope**: Server-wide only



## Monitoring.Snmp.AuthenticationProtocol.Secondary

Authentication protocol used by secondary user for SNMP v3 authentication.

- **Type**: `SnmpAuthenticationProtocol`
- **Default**: `SHA1`
- **Scope**: Server-wide only



## Monitoring.Snmp.AuthenticationUser

Authentication user used for SNMP v3 authentication.

- **Type**: `string`
- **Default**: `"ravendb"`
- **Scope**: Server-wide only



## Monitoring.Snmp.AuthenticationUser.Secondary

Authentication secondary user used for SNMP v3 authentication.

- **Type**: `string`
- **Default**: `null (disabled)`
- **Scope**: Server-wide only



## Monitoring.Snmp.Community

Community string used for SNMP v2c authentication.

- **Type**: `string`
- **Default**: `"ravendb"`
- **Scope**: Server-wide only



## Monitoring.Snmp.DisableTimeWindowChecks

EXPERT ONLY.  
Disables time window checks, which are problematic for some SNMP engines.

- **Type**: `bool`
- **Default**: `false`
- **Scope**: Server-wide only



## Monitoring.Snmp.Enabled

Indicates if SNMP endpoint is enabled or not.

- **Type**: `bool`
- **Default**: `false`
- **Scope**: Server-wide only



## Monitoring.Snmp.Port

Port at which SNMP listener will be active.

- **Type**: `int`
- **Default**: `161`
- **Scope**: Server-wide only



## Monitoring.Snmp.PrivacyPassword

Privacy password used for SNMP v3 privacy.

- **Type**: `string`
- **Default**: `"ravendb"`
- **Scope**: Server-wide only



## Monitoring.Snmp.PrivacyPassword.Secondary

Privacy password used by secondary user for SNMP v3 privacy.

- **Type**: `string`
- **Default**: `null`
- **Scope**: Server-wide only



## Monitoring.Snmp.PrivacyProtocol

Privacy protocol used for SNMP v3 privacy.

- **Type**: `SnmpPrivacyProtocol`
- **Default**: `SnmpPrivacyProtocol.None`
- **Scope**: Server-wide only



## Monitoring.Snmp.PrivacyProtocol.Secondary

Privacy protocol used by secondary user for SNMP v3 privacy.

- **Type**: `SnmpPrivacyProtocol`
- **Default**: `SnmpPrivacyProtocol.None`
- **Scope**: Server-wide only



## Monitoring.Snmp.SupportedVersions

List of supported SNMP versions. Values must be semicolon separated.

- **Type**: `string[]`
- **Default**: `V2C;V3`
- **Scope**: Server-wide only



## Monitoring.Cpu.Exec

A command or executable to run which will provide machine CPU usage and process CPU to standard output.  
If specified, RavenDB will use this information for monitoring CPU usage.  
Note: the write to standard output should be unbuffered to work properly.

- **Type**: `string`
- **Default**: `null`
- **Scope**: Server-wide only



## Monitoring.Cpu.Exec.Arguments

The command line arguments for the 'Monitoring.Cpu.Exec' command or executable.  
The arguments must be escaped for the command line.

- **Type**: `string`
- **Default**: `null`
- **Scope**: Server-wide only



## Monitoring.Disk.ReadStatsDebounceTimeInMs

The minimum interval between measures to calculate the disk stats.

- **Type**: `TimeSetting`
- **Default**: `1000`
- **Scope**: Server-wide only


